# statewave-personal-assistant

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  statewave_integration.py
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/data/: profiles.py
app/models/: chat.py  memory.py
app/services/: llm.py  statewave.py
app/static/: demo.html  index.html  integrate.html
scripts/: compare.py  seed.py
tests/: conftest.py  test_models.py  test_routes.py  test_statewave_client.py  test_statewave_integration.py
